--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://dmftdev:6OifDJfGvpu0WI8s@cluster0.hiwyrsx.mongodb.net/dmftdevDB?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://dmftdev:<password>@cluster0.hiwyrsx.mongodb.net/dmftdevDB?retryWrites=true&w=majority
